fixed some overflow issues

--- a/CompGeometry/style.css
+++ b/CompGeometry/style.css
@@ -7,3 +7,8 @@
 #inner-left {
     width: 575px;
 }
+
+canvas {
+    border: 10px solid black;
+    border-radius: 20px;
+}
